weaker access in static override